feat: add document upload upgrades
